--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0"
   }
