--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.0",
     "webpack": "^5.24.4",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
