--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -5,6 +5,8 @@
     "email": "ihenrits@gmail.com"
   },
   "scripts": {
+    "dev": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack",
     "babel": "babel src/index.jsx --out-file dist/bundle.js",
     "webpack:dev": "NODE_ENV=development yarn webpack"
   },
@@ -21,6 +23,7 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.3.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
