--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -24,7 +24,9 @@
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.1.1",
     "html-webpack-plugin": "^5.3.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
