--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -26,6 +26,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.1.1",
     "html-webpack-plugin": "^5.3.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
