--- a/01-github-explorer/package.json
+++ b/01-github-explorer/package.json
@@ -14,8 +14,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-refresh": "^0.9.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
