--- a/03-ignews/package.json
+++ b/03-ignews/package.json
@@ -14,6 +14,7 @@
     "faunadb": "^4.1.2",
     "next": "10.0.9",
     "next-auth": "^3.13.3",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.7.2",
     "@types/node": "^14.14.35",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
   }
