--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/hooks": "^1.3.1",
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
