--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-apexcharts": "^1.3.7",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.6.0",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
