--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@hookform/resolvers": "^2.5.1",
     "apexcharts": "^3.26.0",
     "framer-motion": "^4.1.2",
     "next": "10.1.3",
@@ -20,7 +21,8 @@
     "react-apexcharts": "^1.3.7",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.6.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
