--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "miragejs": "^0.1.41",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
