--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -25,6 +25,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.6",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "faker": "^5.5.3",
     "miragejs": "^0.1.41",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
