--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.6.0",
     "react-icons": "^4.2.0",
+    "react-query": "^3.16.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
