--- a/04-dashgo/package.json
+++ b/04-dashgo/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.1.5",
     "@hookform/resolvers": "^2.5.1",
     "apexcharts": "^3.26.0",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.2",
     "next": "10.1.3",
     "react": "17.0.2",
