--- a/06-perfreact/package.json
+++ b/06-perfreact/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
+    "@types/react-virtualized": "^9.21.12",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "json-server": "^0.16.3",
