--- a/03-ignews/package.json
+++ b/03-ignews/package.json
@@ -22,6 +22,9 @@
     "stripe": "^8.139.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/next-auth": "^3.7.2",
     "@types/node": "^14.14.35",
     "@types/prismic-dom": "^2.1.1",
@@ -29,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.23.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -37,6 +41,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
+    "jest-dom": "^4.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
