--- a/03-ignews/package.json
+++ b/03-ignews/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jest-dom": "^4.0.0",
     "prettier": "^2.2.1",
