--- a/03-ignews/package.json
+++ b/03-ignews/package.json
@@ -46,6 +46,7 @@
     "jest": "^27.0.6",
     "jest-dom": "^4.0.0",
     "prettier": "^2.2.1",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.2.3"
   }
 }
